--- a/PropertyChanged/CollectionChanged/CollectionChanged.csproj
+++ b/PropertyChanged/CollectionChanged/CollectionChanged.csproj
@@ -101,6 +101,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Base.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CustomCollection.cs" />
