--- a/Graphics/Tile/Tile.csproj
+++ b/Graphics/Tile/Tile.csproj
@@ -92,6 +92,9 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\me.jpg" />
+    <Content Include="Assets\Square310x310Logo.scale-100.png" />
+    <Content Include="tile.xml" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
